# ivyterm

./: Cargo.toml  README.md  build.rs
.github/workflows/: ci.yml
scripts/: ivysel  latsim
src/: helpers.rs  icon.rs  main.rs  modals.rs
src/application/: config.rs  imp.rs  mod.rs  style.css
src/config/: mod.rs  terminal.rs  themes.rs
src/config/themes/: Cobalt2.toml  Mariana.toml  acme.toml  afterglow.toml  alabaster.toml  alabaster_dark.toml  alacritty_0_12.toml  argonaut.toml  ashes_dark.toml  ashes_light.toml  aura.toml  autumn.toml  ayu_dark.toml  ayu_light.toml  ayu_mirage.toml  azu.toml  baitong.toml  base16_default_dark.toml  blood_moon.toml  bluish.toml  breeze.toml  campbell.toml  carbonfox.toml  catppuccin.toml  catppuccin_frappe.toml  catppuccin_latte.toml  catppuccin_macchiato.toml  catppuccin_mocha.toml  challenger_deep.toml  chicago95.toml  cyber_punk_neon.toml  dark_pastels.toml  dark_plus.toml  dark_pride.toml  dawnfox.toml  dayfox.toml  deep_space.toml  dracula.toml  dracula_plus.toml  duskfox.toml  (+134 more)
src/keyboard/: keybindings.rs  mod.rs
src/normal_widgets/terminal/: mod.rs
src/normal_widgets/window/: mod.rs
src/settings_window/: general.rs  mod.rs
src/tmux_api/: mod.rs  receive.rs  send.rs
src/tmux_widgets/terminal/: imp.rs  mod.rs  prediction.rs
src/tmux_widgets/toplevel/: imp.rs
src/tmux_widgets/window/: imp.rs  mod.rs  tmux.rs
