[package]
name = "ivyterm"
version = "1.0.5"
edition = "2021"
license = "GPL v3"
authors = ["Tomaž Hribernik <tomaz.hribernik@protonmail.com>"]
description = "Terminal emulator with Tmux support implemented in gtk4-rs and VTE4."

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
async-channel = "2.3.1"
const_format = "0.2.34"
dirs = "6.0.0"
enumflags2 = { version = "0.7.11", features = ["std"] }
env_logger = "0.11.7"
glib = "0.20.9"
gtk4 = "0.9.6"
lazy_static = "1.5.0"
libadwaita = "0.7.2"
log = "0.4.26"
serde = { version = "1.0.219", features = ["derive"] }
thiserror = "2.0.12"
toml = "0.8.20"
vmap = "0.6.3"
vte4 = { version = "0.8.0", features = ["v0_70"] }

[package.metadata.deb]
assets = [
    ["target/release/ivyterm", "usr/bin/", "755"],
    ["data/com.tomiyou.ivyTerm.desktop", "usr/share/applications/", "644"],
    ["data/com.tomiyou.ivyTerm.svg", "usr/share/icons/hicolor/scalable/apps/", "644"],
]

[[package.metadata.generate-rpm.assets]]
source = "target/release/ivyterm"
dest = "/usr/bin/ivyterm"
mode = "0755"

[[package.metadata.generate-rpm.assets]]
source = "data/com.tomiyou.ivyTerm.desktop"
dest = "/usr/share/applications/com.tomiyou.ivyTerm.desktop"
mode = "0644"

[[package.metadata.generate-rpm.assets]]
source = "data/com.tomiyou.ivyTerm.svg"
dest = "/usr/share/icons/hicolor/scalable/apps/com.tomiyou.ivyTerm.svg"
mode = "0644"
